src/components/contact/contact-details.module.css
.contact_details {
  width: 120rem;
  margin: auto;

  padding: 0 3rem;
  padding-top: 12rem;
  padding-bottom: 8rem;
  color: #1a1a1a;
}

.title_container {
  display: grid;
  grid-template-columns: 1fr 1fr;
}

.title {
  line-height: 1.4;
  font-size: 3rem;
  font-weight: 700;
  margin-bottom: 1.5rem;
}

.description {
  font-weight: 300;
  font-size: 1.5rem;
  line-height: 1.6;
}

.social_links {
  display: flex;
  align-self: flex-end;
  justify-content: flex-end;
}

.social_link {
  display: flex;
  align-items: center;
  justify-content: center;

  padding: 0.8rem;
  border-radius: 100%;
  margin-right: 1rem;

  display: inline-block;
  background-color: #f6a131;
}

.details_container {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 4rem;
  margin-top: 6rem;
}

.details {
  display: grid;
  grid-template-columns: auto 1fr;
  column-gap: 2.4rem;
  background-color: white;
  padding: 4rem 3.2rem;
  border-radius: 5px;

  transition: all 0.2s ease-in-out;
}

.details:hover {
  box-shadow: 0 20px 35px rgba(0, 0, 0, 0.07);
}

.icon_container {
  padding: 1.6rem;
  background-color: #f5f5f5;
  border-radius: 100%;
}

.label {
  font-weight: 700;
  font-size: 2rem;
  line-height: 1.4;
  margin-bottom: 0.5rem;
}

.value {
  font-size: 1.5rem;
  line-height: 1.7;
}

